--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: LockPick
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python nazwa_twojego_skryptu.py
+    startCommand: python main.py
     plan: free
